--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@google/generative-ai": "^0.24.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
@@ -31,6 +33,8 @@
     "hcaptcha": "^0.2.0",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
+    "next-auth": "^4.24.11",
+    "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
